# translate-dir-cli

./: .gitignore  README.md  cli.py  pyproject.toml  reinstall.sh
.github/workflows/: main.yml
docs/: main.md
