[project]
name = "translate-dir-cli"
version = "0.0.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "translate-dir-lib",
    "typer>=0.16.0",
]

[project.scripts]
translate-dir = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.uv.sources]
translate-dir-lib = { git = "https://github.com/DobbiKov/translate-dir-lib" } # for simple usage
# translate-dir-lib = { path = "../translate-dir-lib", editable = true } # for development
